--- a/index.html
+++ b/index.html
@@ -41,22 +41,46 @@
 	</section>
 	
 	<section><h1><code>.travis.yml</code></h1>
-	<pre><code>services:
+	  <pre><code>language:
+  - minimal
+
+services:
   - docker
+
 install:
   - docker pull jjmerelo/test-perl6
-  - docker run -t --entrypoint="/bin/sh" jjmerelo/test-perl6 -c \
-      "apk update && apk upgrade && apk add openssl-dev"
-script:
-  - docker run -t -v  $TRAVIS_BUILD_DIR:/test jjmerelo/test-perl6
+
+script: docker run -t -v  $TRAVIS_BUILD_DIR:/test jjmerelo/test-perl6
 	</code></pre>
 	</section>
+
 	<section data-background='img/docker.png'></section>
 	      
 	<section data-background='https://farm3.staticflickr.com/2948/33373191263_9a320df034_k_d.jpg'>
 	  <h1>That's fast!</h1>
 
 	</section>
+
+	<section><h1>But I have Open SSL</h1></section>
+
+	<section><pre><code>language:
+  - minimal
+
+services:
+  - docker
+
+install:
+  - docker pull jjmerelo/perl6-test-openssl
+
+script:
+  - docker run -t -v $TRAVIS_BUILD_DIR:/test jjmerelo/perl6-test-openssl
+	  </code></pre>
+	</section>
+
+	<section><h1>Get test results while you wait!</h1>
+	  <h1 class='fragment'>Use Perl 6 docker containers</h1>
+	</section>
+	
       </div>
     </div>
 
