--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ script: docker run -t -v  $TRAVIS_BUILD_DIR:/test jjmerelo/test-perl6
 
 	<section><h1>But I have Open SSL</h1></section>
 
-	<section><pre><code>language:
+	<section><h1>Use perl6-test-openssl</h1>
+	  <pre><code>language:
   - minimal
 
 services:
